--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ a:active {
     width: 100%;
     height: 45rem;
     margin-top: 16px;
-    background-image:url("/HTML-CSS-Module-Project/img/first-background.jpg");
+    background-image:url("/img/first-background.jpg");
     background-size: cover;
     display: flex;
     flex-direction: column;
